--- a/Deneme/pom.xml
+++ b/Deneme/pom.xml
@@ -41,6 +41,12 @@
 		    <artifactId>json</artifactId>
 		    <version>20160810</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>3.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
